# google-ads-mcp

./: .gitignore  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
src/google_ads_mcp/: __init__.py  __main__.py  cli.py  errors.py  server.py  settings.py  types.py
src/google_ads_mcp/ads/: __init__.py  _errors.py  _proto.py  accounts.py  client.py  gaql.py  mutate.py  recommendations.py  rpc.py  schema.py
src/google_ads_mcp/auth/: __init__.py  credentials.py  init_cmd.py  local.py  oauth.py
src/google_ads_mcp/observability/: __init__.py  activity.py  audit.py  diagnostics.py
src/google_ads_mcp/resources/: __init__.py  accounts.py  rpc_catalog.py  rpc_schema.py  schema.py
src/google_ads_mcp/safety/: __init__.py  allowlist.py  audit.py  clock.py  diff.py  guardrails.py  limits.py  pending.py
src/google_ads_mcp/tools/: __init__.py  _flow.py  layer1.py  layer2.py
tests/unit/: test_activity.py  test_ads_errors.py  test_allowlist.py  test_audit.py  test_credentials_normalization.py  test_diff.py  test_gaql_helpers.py  test_guardrails.py  test_init_helpers.py  test_layer2_helpers.py  test_limits.py  test_local_credentials.py  test_pending.py  test_perform_mutate_rpc.py  test_proto.py  test_rpc_dispatcher.py  test_server_wiring.py  test_settings.py
